[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game Assets/Interface/Main Interface.png" type="Texture" id=1]
[ext_resource path="res://Game Assets/Dungeons/Dngn 1 Grasslands.png" type="Texture" id=2]
[ext_resource path="res://Game Assets/Buttons/Battle.png" type="Texture" id=3]
[ext_resource path="res://Game Assets/Buttons/Crafting.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Game Assets/Interface/Coins.png" type="Texture" id=6]
[ext_resource path="res://DefaultFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Minions.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Unit Detection Zone.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=11]

[node name="Idle OverLord" type="Node2D"]

[node name="Main" type="Node2D" parent="."]

[node name="World" type="Node2D" parent="Main"]

[node name="Dngn 1 Grass" type="Sprite" parent="Main/World"]
position = Vector2( 360, 671 )
texture = ExtResource( 2 )

[node name="Units" type="YSort" parent="Main"]
script = ExtResource( 5 )

[node name="Minion Detection Zone" parent="Main/Units" instance=ExtResource( 10 )]

[node name="Enemy Detection Zone" parent="Main/Units" instance=ExtResource( 10 )]
collision_layer = 2
collision_mask = 2

[node name="Enemy" parent="Main/Units" instance=ExtResource( 8 )]
position = Vector2( 373.347, 151.583 )

[node name="Minions" parent="Main/Units" instance=ExtResource( 9 )]
position = Vector2( 385.504, 634.933 )

[node name="MinionSpawnTimer" type="Timer" parent="Main/Units"]
wait_time = 5.5
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="Main/Units"]
wait_time = 3.0
autostart = true

[node name="UI" type="Control" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Interface" type="Sprite" parent="Main/UI"]
position = Vector2( 359.842, 640 )
texture = ExtResource( 1 )

[node name="Coins Label" type="Label" parent="Main/UI"]
margin_left = 75.75
margin_top = 2.85002
margin_right = 376.75
margin_bottom = 62.85
custom_fonts/font = ExtResource( 7 )
text = "7311999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Craft" type="Button" parent="Main/UI"]
margin_left = 164.333
margin_top = 1215.3
margin_right = 241.333
margin_bottom = 1282.3
rect_pivot_offset = Vector2( -711.646, -97.772 )
focus_mode = 0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battle" type="Button" parent="Main/UI"]
margin_left = 283.469
margin_top = 1180.29
margin_right = 438.469
margin_bottom = 1268.29
rect_pivot_offset = Vector2( -711.646, -97.772 )
focus_mode = 0
action_mode = 0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Sprite" parent="Main/UI"]
position = Vector2( 42.3966, 27.7017 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="Main/Units/Minion Detection Zone" to="Main/Units" method="_on_Minion_Detection_Zone_body_entered"]
[connection signal="body_entered" from="Main/Units/Enemy Detection Zone" to="Main/Units" method="_on_Enemy_Detection_Zone_body_entered"]
[connection signal="timeout" from="Main/Units/MinionSpawnTimer" to="Main/Units" method="_on_MinionSpawnTimer_timeout"]
[connection signal="timeout" from="Main/Units/EnemySpawnTimer" to="Main/Units" method="_on_EnemySpawnTimer_timeout"]
[connection signal="pressed" from="Main/UI/Craft" to="Main/UI" method="_on_Craft_pressed"]
[connection signal="pressed" from="Main/UI/Battle" to="Main/UI" method="_on_Battle_pressed"]
